--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,5 +41,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: my-artifact
-          path: my_file.txt
+          path: test.pdf
           retention-days: 1
